--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-env": "^1.7.0",
     "graphql": "^14.4.2",
     "graphql-yoga": "^1.18.1",
+    "prisma-binding": "^2.3.15",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
