--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,3 +1,5 @@
 endpoint: ${env:PRISMA_ENDPOINT}
+# endpoint: http://localhost:4466/
 datamodel: datamodel.prisma
+# secret: prisma_s3cr3t
 secret: ${env:PRISMA_SECRET}
