--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "bcryptjs": "^2.4.3",
     "graphql": "^14.4.2",
     "graphql-cli": "^3.0.14",
     "graphql-yoga": "^1.18.1",
-    "prisma-binding": "^2.3.15",
-    "uuid": "^3.3.2"
+    "prisma-binding": "^2.3.15"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
