--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^14.4.2",
     "graphql-cli": "^3.0.14",
     "graphql-yoga": "^1.18.1",
+    "jsonwebtoken": "^8.5.1",
     "prisma-binding": "^2.3.15"
   },
   "devDependencies": {
